[package]
name = "APTOS_HACK_YOPEXHUB"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "code_rust_bin"
path = "src/main.rs"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.78"
anyhow = "1.0"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "devnet" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement"
]

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }